# api/openapi.yaml
@@ -552,6 +552,8 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
+        '429':
+          $ref: '#/components/responses/TooManyRequests'
         '404':
           $ref: '#/components/responses/NotFound'
         '409':
@@ -572,6 +574,8 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
+        '429':
+          $ref: '#/components/responses/TooManyRequests'
         '404':
           $ref: '#/components/responses/NotFound'
         '409':
@@ -607,6 +611,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ClientAuthError'
+        '429':
+          $ref: '#/components/responses/TooManyRequests'
   /api/v1/auth/tokens/refresh:
     post:
       operationId: refreshAccessToken
